refactor: modularize monolithic MCP server into focused modules
Split the 982-line index.ts into 11 focused modules with clear
boundaries and no circular dependencies. Added full CRUD DNS tools,
specialized record creators, and domain management capabilities.

- Extract shared types to types.ts
- Extract DNS utils (normalization, fingerprinting) to dns-utils.ts
- Extract Zod schemas to schemas.ts
- Extract response helpers to tool-result.ts
- Split 19 tools into 4 domain-grouped modules under tools/
- Add server.ts orchestration with register pattern
- Slim index.ts to 26-line entry point
- Rename project to spaceship-mcp

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "spaceship-mcp-check",
+  "name": "spaceship-mcp",
   "version": "0.1.0",
+  "description": "MCP Server for managing domains and DNS records via the Spaceship API",
   "private": true,
   "type": "module",
+  "bin": {
+    "spaceship-mcp": "dist/index.js"
+  },
   "scripts": {
     "dev": "tsx src/index.ts",
     "start": "node --enable-source-maps dist/index.js",
@@ -19,6 +23,6 @@
     "typescript": "^5.9.2"
   },
   "engines": {
-    "node": ">=24"
+    "node": ">=20"
   }
 }
