--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bartwaardenburg/spaceship-mcp.git"
+    "url": "git+https://github.com/bartwaardenburg/spaceship-mcp.git"
   },
   "keywords": [
     "mcp",
@@ -40,6 +40,7 @@
   ],
   "author": "Bart Waardenburg",
   "license": "MIT",
+  "mcpName": "io.github.bartwaardenburg/spaceship-mcp",
   "bugs": {
     "url": "https://github.com/bartwaardenburg/spaceship-mcp/issues"
   },
