fix: align API implementation with OpenAPI spec and add CI workflow
- Rename phoneExtension/faxExtension to phoneExt/faxExt per API spec
- Add missing taxNumber field to Contact
- Make postalCode optional per API spec
- Fix getContactAttributes to return flat object instead of wrapped array
- Fix updateDomainContacts to return verificationStatus response
- Add displayName to update_sellerhub_domain tool
- Add CI workflow with auto-updating coverage badge
- Update README badges and tool counts

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@release-it/conventional-changelog": "^10.0.5",
     "@types/node": "^20.19.30",
+    "@vitest/coverage-v8": "^4.0.18",
     "release-it": "^19.2.4",
     "tsx": "^4.21.0",
     "typescript": "^5.9.2",
