--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "spaceship-mcp",
   "version": "0.2.3",
+  "packageManager": "pnpm@10.28.1",
   "description": "MCP server for managing domains, DNS records, and marketplace listings via the Spaceship API",
   "type": "module",
   "bin": {
